--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </nav>
     </header>
 
-    <!-- Hero Image Section -->
+    <!-- Hero Image Section g-->
     <div class="hero-image"></div>
 
     <!-- Content Section 1 -->
