--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Content Section 1 -->
     <section id="content">
-        <div class="content-heading">Welcome to Our Site</div>
+        <div class="content-heading">Welcome to the Site of Group 1</div>
         <div class="content-text">
             <p>Rice prices in the Philippines continued their downtrend in the first month of 2025, with the inflation rate for the grain staple contracting for the first time in nearly four years, amid a trend of declining global prices and a reduction in rice tariffs mid-last year.
 
