--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
             
         </div>
         <div class="content-heading">
-            About us
+            <p>About us <br/>
+                Hanz Philip Manaog <br/>
+                Roy Christian Cruz <br/>
+                Moises Theo Atienza <br/>
+                Lester Mendoza <br/>
+                Francis Bartlett <br/></p>
+            
         </div>
     </section>
 
