--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
         </div>
         <div class="content-heading">
             <p>About us <br/>
-                Hanz Philip Manaog <br/>
-                Roy Christian Cruz <br/>
-                Moises Theo Atienza <br/>
-                Lester Mendoza <br/>
-                Francis Bartlett <br/></p>
-            
+                <span class="name">Hanz Philip Manaog</span> <br/>
+            <span class="name">Roy Christian Cruz</span> <br/>
+            <span class="name">Moises Theo Atienza</span> <br/>
+            <span class="name">Lester Mendoza</span> <br/>
+            <span class="name">Francis Bartlett</span> <br/>
+            </p>
         </div>
     </section>
 
